# mindscript

./: .gitignore  LICENSE  README.md  mindscript.py  pyproject.toml  requirements.txt  test.ms
.github/workflows/: publish.yml
examples/: programming.ms  std.ms  test.ms
ms/: __init__.py  ast.py  backend.py  bnf.py  interpreter.py  lexer.py  magic.py  native.py  objects.py  oracle.py  parser.py  printer.py  schema.py  startup.py  types.py
ms/lib/: lang.ms  oracles.ms  std.ms  test.ms
ms/libnative/: auxiliary.py  collections.py  file.py  math.py  network.py  std.py  system.py
ms/native/: collections.py  http.py  math.py  network.py  std.py  string.py
notebooks/: Untitled.ipynb
scripting/: __init__.py  interpreter.py  lexer.py  native.py  parser.py  printer.py
src/mindscript/: __init__.py  ast.py  backend.py  bnf.py  builtins.py  cli.py  interpreter.py  lexer.py  objects.py  oracle.py  parser.py  printer.py  runtime.py  schema.py  startup.py  types.py
src/mindscript/lib/: lang.ms  std.ms
src/mindscript/libnative/: auxiliary.py  collections.py  file.py  math.py  network.py  std.py  string.py  system.py
tests/: test.ms  test_lexer.py  test_parser.py
