[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "mindscript"
version = "0.3.0" # Duplicate in "__init__.py"!
description = "An experimental programming language combining formal and informal computation."
license = { file = "LICENSE" }
authors = [
    { name = "Daios AI", email = "help@daios.ai" },
]
readme = "README.md"
dependencies = [
    "pydantic >= 2.7.1",
    "requests >= 2.31"
]
requires-python = ">= 3.9"
keywords = ["programming language", "unstructed data"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
]

[project.urls]
"Homepage" = "https://daios.ai"
"Bug Reports" = "https://github.com/DAIOS-AI/mindscript/issues"
"Source" = "https://github.com/DAIOS-AI/mindscript/"

[project.scripts]
mindscript = "mindscript.cli:main"

[tool.setuptools.package-data]
"mindscript.lib" = ["*.ms"]

